--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,13 @@ h1.question {
   margin-bottom: 20px;
   font-size: 24px;
   color: #333;
+  text-align: center;
 }
 
 .container {
   position: relative;
-  width: 500px;
+  max-width: 500px;
+  min-width: 100%;
   height: 500px;
   border: 2px solid #333;
   display: flex;
