--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,13 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
-  background-color: #f0f0f0;
+  background-color: #333;
 }
 
 h1.question {
   margin-bottom: 20px;
   font-size: 24px;
-  color: #333;
+  color: #fff;
   text-align: center;
 }
 
@@ -20,7 +20,7 @@ h1.question {
   max-width: 500px;
   min-width: 100%;
   height: 500px;
-  border: 2px solid #333;
+  border: 2px solid #fff;
   display: flex;
   justify-content: center;
   align-items: center;
